--- a/idi/ian/deploy/docker-compose.yml
+++ b/idi/ian/deploy/docker-compose.yml
@@ -193,7 +193,9 @@ services:
     ports:
       - "3000:3000"
     environment:
-      - GF_SECURITY_ADMIN_PASSWORD=admin
+      # SECURITY: Use environment variable for admin password in production
+      # Set GF_SECURITY_ADMIN_PASSWORD in your .env file or environment
+      - GF_SECURITY_ADMIN_PASSWORD=${GF_SECURITY_ADMIN_PASSWORD:-changeme}
       - GF_USERS_ALLOW_SIGN_UP=false
     volumes:
       - grafana-data:/var/lib/grafana
